polish: Biohazard (#2257)
* test: opt Biohazard into sidebar test

* refactor: modernize

* nit: consolidate getBirdFeed/getBirdFeed2

nit: restructure step2

rework bird cage / bird feed steps

more bird cage cleanup

birdfeed -> bird feed

item step

* space

* Consolidate omart/go to west ardougne step

not worth another step just to change the phrasing to 'return' imo

also accept "Okay, let's do it." which apparently can show up.

* t: make rotten apple pickup step an ItemStep

* space

* Consolidate cupboard step

* add step for exiting headquarters backyard

* phrasing for sarah cupboard step

* kill mourner phrasing

* kilron phrasing

* add Distillator to requirement to the "Return to Elena" steps

* fix: tooltip for coins

* cleanup: medical gown equipped

* buy priest gown set step, just in case

* move chemical step in list

* remove stray notes that are no longer accurate

* add unlock reward

---------

Co-authored-by: Zoinkwiz <zoinkwiz@hotmail.co.uk>